Add footer to index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -199,6 +199,8 @@
 
   <!-- JS -->
   <script src="app.js"></script>
-
+  <footer class="app-footer">
+  © forex-911 · Lightroom Preset Engine
+</footer>
 </body>
 </html>
